--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/phone.css">
     <link rel="stylesheet" href="estilos/tablet.css">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=key_vertical" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=lock" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=person" />
 </head>
 <body>
@@ -16,9 +16,32 @@
        <section>
         <img src="imagens/fundo-ver.jpeg" alt="Imagem abstrata">
            <h1>Login</h1>
-           <p>Seja bem-vindp(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-       </section>
-   
-   
+           <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+       
+       <div>
+        <form action="cadastro.php">
+            <p>
+                <label for="iemail">
+                <img id="usuario" src="imagens/usuario.png" alt="Usuário">    
+                </label>
+                <input type="email" name="email" id="iemail" autocomplete="on" required placeholder="Digite seu Email">
+            </p>
+
+            <p>
+                <label for="iemail">
+                    <img id="senha" src="imagens/senha.png"><label>
+                <input type="email" name="email" id="iemail" autocomplete="on" required placeholder="Digite sua senha">
+            </p>
+
+            <p>
+                <input type="submit" value="Entrar">
+            </p>
+            <p id="esqueci">
+                Esqueci a senha <img id="msg" src="imagens/e-mail.png" alt="">
+            </p>
+        </form>
+       </div>
+   </section>
+  
 </body>
 </html>
