update.css projeto tela login

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
        
        <div>
         <form action="cadastro.php">
-            <p>
+            <p class="fundo">
                 <label for="iemail">
                 <img id="usuario" src="imagens/usuario.png" alt="Usuário">    
                 </label>
                 <input type="email" name="email" id="iemail" autocomplete="on" required placeholder="Digite seu Email">
             </p>
-
-            <p>
+                <br>
+            <p class="fundo">
                 <label for="iemail">
                     <img id="senha" src="imagens/senha.png"><label>
                 <input type="email" name="email" id="iemail" autocomplete="on" required placeholder="Digite sua senha">
             </p>
-
+                
             <p>
                 <input type="submit" value="Entrar">
             </p>
