--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
        
        <div>
-        <form action="cadastro.php">
+        <form action="cadastro.php" method="post">
             <p class="fundo">
                 <label for="iemail">
                 <img id="usuario" src="imagens/usuario.png" alt="Usuário">    
