update projeto tela login

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                     <div class="campo">
                         <span class="material-icons">person</span>
                         <input type="email" name="login" id="ilogin" placeholder="Seu email" autocomplete="email" required maxlength="30">
-                        <label for="ilogin">Login</label>
+                        <label for="ilogin"></label>
                     </div>
                     <div class="campo">
                         <span class="material-icons">key</span>
                         <input type="password" name="Senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="30">
-                        <label for="isenha">Senha</label>
+                        <label for="isenha"></label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha <span class="material-icons">mail</span></a>
+                    <a class="botao" href="esqueci.html">Esqueci a senha <span class="material-icons">mail</span></a>
                 </form>
             </div>
 
